<resources>
    <string name="app_name">GithubUser</string>
    <string name="user_name">Nama User</string>
    <string name="user_nickname">Nickname User</string>
    <string name="user_follower">Follower</string>
    <string name="user_following">Following</string>
    <string name="search">Search</string>
    <string name="search_hint">Masukkan kata</string>
    <string name="tab_text_1">FOLLOWERS</string>
    <string name="tab_text_2">FOLLOWING</string>
    <string name="favorite_drawable">favorite drawable</string>
    <string name="favorited">favorited</string>
    <string name="favorite_border">Favorite Border</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite_menu">Favorite</string>
    <string name="setting_menu">Settings</string>
</resources>